# satori-python

./: .pre-commit-config.yaml  LICENSE  README.md  docs.md  exam.py  main.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/actions/setup-python/: action.yml
.github/workflows/: release-adapter-console.yml  release-adapter-milky.yml  release-adapter-onebot11.yml  release-adapter-qq.yml  release-adapter-satori.yml  release-client.yml  release-core.yml  release-server.yml  release.yml  ruff.yml
.mina/: adapter_console.toml  adapter_milky.toml  adapter_onebot11.toml  adapter_qq.toml  adapter_satori.toml  client.toml  core.toml  server.toml
example/: adapter.py  client.py  client_webhook.py  milky_adapter_example.py  server.py  server_webhook.py  server_with_adapter.py
experimental/: _model_dcls.py  _model_msgspec.py  _model_pyd.py  model.py  model.pyi
src/satori/: __init__.py  account.py  account.pyi  adapter.py  api.py  client.py  config.py  const.py  element.py  event.py  exception.py  main.py  model.py  network.py  parser.py  server.py  session.py  utils.py
src/satori/_vendor/: fleep.py
src/satori/adapters/console/: __init__.py  api.py  backend.py  main.py  message.py
src/satori/adapters/milky/: README.md  __init__.py  api.py  base.py  main.py  message.py  reverse.py  sse.py  utils.py  webhook.py
src/satori/adapters/milky/events/: __init__.py  base.py  group.py  member.py  message.py  notice.py  request.py
src/satori/adapters/onebot11/: __init__.py  api.py  forward.py  message.py  reverse.py  utils.py
src/satori/adapters/onebot11/events/: __init__.py  base.py  message.py  notice.py  request.py
src/satori/adapters/qq/: __init__.py  api.py  ark.py  audit_store.py  exception.py  main.py  markdown.py  message.py  utils.py  websocket.py
src/satori/adapters/qq/events/: base.py  group.py  guild.py  interaction.py  message.py
src/satori/adapters/qqbot/: api.py  audit_store.py  main.py  message.py  utils.py  websocket.py
src/satori/adapters/qqbot/events/: __init__.py  base.py  group.py  guild.py  interaction.py  message.py
src/satori/adapters/satori/: __init__.py  main.py
src/satori/client/: __init__.py  account.py  account.pyi  config.py  protocol.py  session.py
src/satori/client/network/: base.py  util.py  webhook.py  websocket.py
src/satori/network/: base.py  webhook.py  websocket.py  ws.py  ws_client.py  ws_server.py
src/satori/server/: __init__.py  adapter.py  conection.py  connection.py  deque.py  formdata.py  model.py  route.py  utils.py
