[project]
name = "satori-python"
version = "0.9.0"
description = "Satori Protocol SDK for python"
authors = [
    {name = "RF-Tar-Railt",email = "rf_tar_railt@qq.com"},
]
dependencies = [
    "aiohttp>=3.8.6",
    "loguru>=0.7.2",
    "launart>=0.8.2",
    "typing-extensions>=4.8.0",
    "graia-amnesia>=0.8.2",
    "starlette>=0.32.0.post1",
    "uvicorn[standard]>=0.24.0.post1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/RF-Tar-Railt/satori-python"
repository = "https://github.com/RF-Tar-Railt/satori-python"

[build-system]
requires = ["mina-build>=0.5.1"]
build-backend = "mina.backend"

[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.11.0",
    "ruff>=0.1.5",
    "pre-commit>=3.5.0",
    "fix-future-annotations>=0.5.0",
    "mina-build>=0.5.2",
    "pdm-mina>=0.3.1",
]


[tool.pdm.build]
includes = ["src/satori"]

[tool.pdm.scripts]
format = { composite = ["isort ./src/ ./example/","black ./src/ ./example/","ruff ./src/ ./example/"] }


[tool.black]
line-length = 110
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 110
skip_gitignore = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "UP037"]

line-length = 110
target-version = "py38"

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.8"