[project]
name = "satori-python"
description = "Satori Protocol SDK for python"
authors = [
    {name = "RF-Tar-Railt",email = "rf_tar_railt@qq.com"},
]
dynamic = ["version"]
dependencies = [
    "aiohttp>=3.9.3",
    "loguru>=0.7.2",
    "launart>=0.8.2",
    "typing-extensions>=4.7.0",
    "graia-amnesia[uvicorn]<0.12.0,>=0.11.0",
    "starlette[python-multipart]>=0.37.2",
    "yarl>=1.9.4",
    "python-multipart>=0.0.9",
    "websockets>=15.0.1",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/RF-Tar-Railt/satori-python"
repository = "https://github.com/RF-Tar-Railt/satori-python"

[project.optional-dependencies]
msgspec = [
    "msgspec>=0.19.0",
]
[build-system]
requires = ["mina-build<0.6,>=0.5.1", "pdm-backend<2.4.0"]
build-backend = "mina.backend"

[dependency-groups]
dev = [
    "isort>=5.13.2",
    "black>=24.4.0",
    "ruff>=0.4.1",
    "pre-commit>=3.7.0",
    "fix-future-annotations>=0.5.0",
    "mina-build<0.6,>=0.5.1",
    "pdm-mina>=0.3.2",
    "nonechat<0.7.0,>=0.6.0",
    "uvicorn[standard]>=0.35.0",
]


[tool.pdm.build]
includes = ["src/satori"]
excludes = ["src/satori/adapters/*"]

[tool.pdm.scripts]
format = { composite = ["isort ./src/ ./example/","black ./src/ ./example/","ruff check"] }

[tool.pdm.version]
source = "file"
path = "src/satori/__init__.py"

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["exam_qps.py", "exam1.py", "exam2.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "Q"]
ignore = ["E402", "F403", "F405", "C901", "T201"]

[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportShadowedImports = false
disableBytesTypePromotions = true